0x00-hello_world/ls
6-size.c: In function ‘main’:
6-size.c:8:2: warning: implicit declaration of function ‘print’; did you mean ‘printf’? [-Wimplicit-function-declaration]
    8 |  print("Size of a char: %d byte(s)\n", sizeof(char));
      |  ^~~~~
      |  printf
6-size.c:10:31: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
   10 |  printf("Size of a long int: %d byte(s)\n", sizeof(long int));
      |                              ~^             ~~~~~~~~~~~~~~~~
      |                               |             |
      |                               int           long unsigned int
      |                              %ld
6-size.c:11:48: error: expected ‘)’ before ‘sizeof’
   11 |  printf("Size of a long long int: %d byte(s)\n" sizeof(long long int));
      |                                                ^~~~~~~
      |                                                )
6-size.c:11:36: warning: format ‘%d’ expects a matching ‘int’ argument [-Wformat=]
   11 |  printf("Size of a long long int: %d byte(s)\n" sizeof(long long int));
      |                                   ~^
      |                                    |
      |                                    int
6-size.c:12:28: warning: format ‘%d’ expects argument of type ‘int’, but argument 2 has type ‘long unsigned int’ [-Wformat=]
   12 |  printf("Size of a float: %d byte(s)\n", sizeof(float));
      |                           ~^             ~~~~~~~~~~~~~
      |                            |             |
      |                            int           long unsigned int
      |                           %ld
